--- a/tamrin-Html.html
+++ b/tamrin-Html.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahdi Ghaznavi-Tramrin-html/css</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style-tamrin-html.css">
-    <link rel="stylesheet" href="fontiran.css">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/style-tamrin-html.css">
+    <link rel="stylesheet" href="./font/fontiran.css">
 </head>
+
 <body>
-    <div    class="Menu">
+    <div class="Menu">
         <div class="Site-Logo"><img src="Untitled-1.png" alt="Logo" class="Logo-Img"></div>
         <div class="Mtn"><a href="index.html"> سایت شخصی </a></div>
         <div class="Menu-asli">
             <ul>
-                <a href="#"><li>صفحه اصلی</li></a>
-              
+                <a href="#">
+                    <li>صفحه اصلی</li>
+                </a>
+
                 <li>
                     <select onchange="location = this.value;" class="select1">
                         <option class="op" value="#">تمرین ها</option>
@@ -30,13 +34,20 @@
     </div>
     <div class="d5">
         <pre class="p1">وبسایت شخصی مهدی غزنوی</pre>
-     </div>
-     <div class="d1">
-         <ul> 
-            <a href="#" class="a1"><li class="l1">تمرینی قرار نگرفته</li></a>
-            <a href="#" class="a2"><li>تمرینی قرار نگرفته</li></a>
-            <a href="#" class="a3"><li>تمرینی قرار نگرفته</li></a>
-         </ul>
-     </div>
+    </div>
+    <div class="d1">
+        <ul>
+            <a href="#" class="a1">
+                <li class="l1">تمرینی قرار نگرفته</li>
+            </a>
+            <a href="#" class="a2">
+                <li>تمرینی قرار نگرفته</li>
+            </a>
+            <a href="#" class="a3">
+                <li>تمرینی قرار نگرفته</li>
+            </a>
+        </ul>
+    </div>
 </body>
+
 </html>
