--- a/tamrin-Html.html
+++ b/tamrin-Html.html
@@ -14,39 +14,19 @@
 <body>
     <div class="Menu">
         <div class="Site-Logo"><img src="Untitled-1.png" alt="Logo" class="Logo-Img"></div>
-        <div class="Mtn"><a href="index.html"> سایت شخصی </a></div>
         <div class="Menu-asli">
-            <ul>
-                <a href="#">
-                    <li>صفحه اصلی</li>
-                </a>
 
-                <li>
-                    <select onchange="location = this.value;" class="select1">
-                        <option class="op" value="#">تمرین ها</option>
-                        <option class="op" value="tamrin-Html.html">تمرین های html/css</option>
-                        <option class="op" value="tamrin-js.html">تمرین های JS</option>
-                   
-                    </select>
-                </li>
-            </ul>
+            <a class="main-page-mtn" href="./index.html">صفحه اصلی</a> &nbsp;&nbsp;
+            <select onchange="location = this.value;" class="select1">
+               <option class="op" value="#">تمرین ها</option>
+                <option class="op" value="./tamrin-Html.html">تمرین های html/css</option>
+                <option class="op" value="./tamrin-js.html">تمرین های JS</option>
+             </select>
+
         </div>
     </div>
     <div class="d5">
         <pre class="p1">وبسایت شخصی مهدی غزنوی</pre>
-    </div>
-    <div class="d1">
-        <ul>
-            <a href="#" class="a1">
-                <li class="l1">تمرینی قرار نگرفته</li>
-            </a>
-            <a href="#" class="a2">
-                <li>تمرینی قرار نگرفته</li>
-            </a>
-            <a href="#" class="a3">
-                <li>تمرینی قرار نگرفته</li>
-            </a>
-        </ul>
     </div>
 </body>
 
